refactor(security): move SecurityConfig.java under config/ and externalize CORS config and utilize immutable collections
- Replaced mutable Arrays.asList() with Java 9 List.of() across security configurations to enforce immutability and prevent runtime modifications.
- Extracted hardcoded CORS origin URLs into pplication.properties via @Value annotation to support dynamic environment configurations (e.g., staging, production).
- Implemented a fallback mechanism to the Vite dev server (http://localhost:5173) to ensure seamless local development.
- Added comprehensive comments clarifying the architectural decisions behind stateless JWTs and CORS security.