@@ -1,4 +1,4 @@
-package com.tsmc.lims.backend.auth.security;
+package com.tsmc.lims.backend.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,11 +12,15 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List; // List.of vs Arrays.asList - List.of is immutable and more concise for fixed-size lists, while Arrays.asList allows modifications but can lead to issues if not used carefully. In this case, List.of is preferred for its simplicity and immutability.
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
+
+    // Read allowed origins from application.properties with a default value of http://localhost:5173 (Vite dev server)
+    @Value("${app.cors.allowed-origins:http://localhost:5173}")
+    private List<String> allowedOrigins;
 
     /**
      * Exposes the BCryptPasswordEncoder as a Spring Bean for use in AuthService.
@@ -35,11 +39,11 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(AbstractHttpConfigurer::disable)
+            .csrf(AbstractHttpConfigurer::disable) // Disable CSRF since we are using stateless JWTs for authentication
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/v1/auth/**").permitAll()
+                .requestMatchers("/api/v1/auth/**").permitAll() // DMZ: Allow unauthenticated access to authentication endpoints
                 .requestMatchers("/error").permitAll()
-                .anyRequest().authenticated()
+                .anyRequest().authenticated() // All other endpoints require authentication (protected by JWT)
             );
         return http.build();
     }
@@ -50,9 +54,9 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://127.0.0.1:5173")); // Only allow the frontend Vite server
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(allowedOrigins); // like Firewall rules, we only allow requests from our trusted frontend port (Vite dev server)
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
